--- a/teoricas/teorica_06/src/bibliography.tex
+++ b/teoricas/teorica_06/src/bibliography.tex
@@ -1,7 +1,7 @@
 \begin{frame}
     \frametitle{Material}
     
-    Vídeos para armar estas slides:
+    Material para armar estas slides:
     \begin{itemize}
         \item Cyrill Stachniss Bayes: \url{https://youtu.be/0lKHFJpaZvE} 
         \item Cyrill Stachniss KF y EKF: \url{https://youtu.be/E-6paM_Iwfc}
@@ -10,6 +10,8 @@
         \item Slides de ECI 2012
         \item Seminario de curso: CS373 Udacity Programming a Robotic Car
         \item \url{https://www.ipb.uni-bonn.de/html/teaching/photo12-2021/2021-pho2-14-ekf.pptx.pdf}
+        \item \url{https://rse-lab.cs.washington.edu/projects/mcl}
+        \item \url{http://ais.informatik.uni-freiburg.de/teaching/ws12/mapping/pdf/slam09-particle-filter.pdf}
     \end{itemize}
     
 \end{frame}
@@ -17,9 +19,33 @@
 \begin{frame}
 	\frametitle{Bibliografía}
 	
-	Capítulo 3 y 7 de: \cite{thrun2005probabilistic}
-	
-	Shon and Lindsen: Manipulating the Multivariate Gaussian Density
+
+    \begin{itemize}
+
+        \item EKF:
+        \begin{itemize}
+            \item Capítulo 3 y 7 de: \cite{thrun2005probabilistic}
+            \item Shon and Lindsen: Manipulating the Multivariate Gaussian Density
+        \end{itemize}
+        
+        \item Particle Filter:
+        \begin{itemize}
+            \item Capítulo 3 \cite{thrun2005probabilistic}
+        \end{itemize}
+        
+
+        \item Monte Carlo Localization:
+        \begin{itemize}
+            \item Capítulo 8.3 \cite{thrun2005probabilistic}
+        \end{itemize}
+        
+        
+        \item Modelos de observación y movimiento:
+        \begin{itemize}
+            \item Capítulo 5 y 6 \cite{thrun2005probabilistic}
+        \end{itemize}
+
+    \end{itemize}
 	
 	\printbibliography
 	
