Slides 06: Minor changes

--- a/teoricas/teorica_06/src/particle_filter.tex
+++ b/teoricas/teorica_06/src/particle_filter.tex
@@ -75,8 +75,8 @@
     
     \footnotesize
     \begin{itemize}
-        \item Note that this is an approximation of the pdf.
-        \item It is important to have a sufficient number of samples to adequately represent the pdf.
+        \item Note that this is an approximation of the PDF (\emph{Probabilistic Density Function}).
+        \item It is important to have a sufficient number of samples to adequately represent the PDF.
     \end{itemize}
 
 \end{frame}
