Slides 07: Add occupancy_grid_map.mp4 video

--- a/teoricas/teorica_07/src/mapping.tex
+++ b/teoricas/teorica_07/src/mapping.tex
@@ -619,15 +619,17 @@
     
     \end{frame}
     
-    \begin{frame}
-    \frametitle{Add example video}
-    \note{Information taken from https://youtu.be/v-Rm9TUG9LA}
+\begin{frame}
+    \frametitle{Example: Occupancy Grid Map}
+    \note{información extraída de https://youtu.be/v-Rm9TUG9LA}
     
-    \url{https://www.youtube.com/watch?v=ykOTfrS5pO4}
-    
-    \TODO{Add example video of grid mapping as done by Cyrill Stachniss}
-\end{frame}
+    \note{Video tomado de https://www.youtube.com/watch?v=ykOTfrS5pO4}
 
+    \begin{center}
+        \movie[autostart,loop,poster]{\includegraphics[width=0.8\columnwidth]{./images/occupancy_grid_map_video.jpg}}{./videos/occupancy_grid_map.mp4}
+    \end{center}
+        
+\end{frame}
 \begin{frame}
     \frametitle{Summary: Occupancy Grid Map}
     \note{Information taken from https://youtu.be/v-Rm9TUG9LA}
