Slides 08: Add EKF-SLAM and GTSAM slides

--- a/teoricas/teorica_08/slides.tex
+++ b/teoricas/teorica_08/slides.tex
@@ -33,11 +33,20 @@
 	
 	\section{SLAM}
 	\input{src/slam.tex}
+
+	\section{EKF-SLAM}
+	\input{src/ekf_slam.tex}
+
+	\section{Factor-Graph}
+	\input{src/graph_slam.tex}
+
+	\section{GTSAM}
+	\input{src/gtsam.tex}
     
     \section{Bundle Adjustment}
     \input{src/bundle_adjustment.tex}
 	
-	\section{Bibliography}
+	\section{Bibliografía}
 	\input{src/bibliography.tex}
 	
 \end{document}
