--- a/teoricas/teorica_08/src/bibliography.tex
+++ b/teoricas/teorica_08/src/bibliography.tex
@@ -22,7 +22,6 @@
 \begin{frame}
     \frametitle{Más material}
     
-    Material para armar estas slides:
     \begin{itemize}
         \item Joan Solá - Lie theory for the roboticist \url{https://youtu.be/gy8U7S4LWzs}
         \item Joan Solá - Course on SLAM \url{https://raw.githubusercontent.com/joansola/slamtb/graph/courseSLAM.pdf}
@@ -30,6 +29,9 @@
         \item Philipp Hennig - Probabilistic Machine Learning - Lecture 17 - Factor Graphs \url{https://youtu.be/fXD6KJB1U20}
         \item Lennart Svensson - Machile Learning Tutorial: Factor Graphs, Belief Propagation and Variational Techniques \url{https://youtu.be/yQg34-2QhvE}
     \end{itemize}
+
+    \alert{incorporar ejercicio ekf-slam (con mapeo de landmarks): \url{https://courses.cs.washington.edu/courses/cse571/24sp/assignments/CSE571_24sp_HW2.pdf}}
+
     
 \end{frame}
 
@@ -44,6 +46,7 @@
     \nocite{grisetti2010tutorial}
     \nocite{chebrolu2021adaptive}
     \nocite{dellaert2017factor}
+    \nocite{carlone2025slamhandbook}
 
 	
 	\printbibliography
