--- a/common/latex_preamble.tex
+++ b/common/latex_preamble.tex
@@ -3,7 +3,7 @@
 % Latex packages
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc} % para copiar acentos en español del pdf y permite acentos en las notas
-\usepackage[english]{babel}
+\usepackage[spanish]{babel}
 \usepackage[per-mode = symbol]{siunitx} % para manejar las unidades
 \usepackage{multimedia} % to add videos with \movie command
 \usepackage{multirow}
@@ -18,6 +18,7 @@
 \usepackage{booktabs} % \toprule \midrule \bottomrule
 \usepackage[backend=biber]{biblatex} % set biber to format references. Must configure Biber in Texstudio
 \usepackage{csquotes} % to remove warning triggered by biblatex and babel
+\usepackage{algorithm} % to put captions to the algorithmics environmets
 \usepackage{algpseudocode} % to write algorithm
 \usepackage{tikz} % to use tikz
 \usepackage[export]{adjustbox} %valign in subfloat
