--- a/teoricas/teorica_08/src/bibliography.tex
+++ b/teoricas/teorica_08/src/bibliography.tex
@@ -1,7 +1,7 @@
 \begin{frame}
     \frametitle{Material}
     
-    Material para armar estas slides:
+    Material used for this slides:
     \begin{itemize}
         \item Cyrill Stachniss SLAM \url{https://youtu.be/BuRCJ2fegcc}
         \item Cyrill Stachniss Factor Graph \url{https://youtu.be/uuiaqGLFYa4}
@@ -20,7 +20,7 @@
 \end{frame}
 
 \begin{frame}
-    \frametitle{Más material}
+    \frametitle{More Material}
     
     \begin{itemize}
         \item Joan Solá - Lie theory for the roboticist \url{https://youtu.be/gy8U7S4LWzs}
@@ -29,18 +29,15 @@
         \item Philipp Hennig - Probabilistic Machine Learning - Lecture 17 - Factor Graphs \url{https://youtu.be/fXD6KJB1U20}
         \item Lennart Svensson - Machile Learning Tutorial: Factor Graphs, Belief Propagation and Variational Techniques \url{https://youtu.be/yQg34-2QhvE}
     \end{itemize}
-
-    \alert{incorporar ejercicio ekf-slam (con mapeo de landmarks): \url{https://courses.cs.washington.edu/courses/cse571/24sp/assignments/CSE571_24sp_HW2.pdf}}
-
-    
+   
 \end{frame}
 
 \begin{frame}
-	\frametitle{Bibliografía}
+	\frametitle{Bibliography}
     
     \begin{itemize}
-        \item Capítulo 46 de \cite{siciliano2016handbook}
-        \item Capítulo 10 de \cite{thrun2005probabilistic}
+        \item Chapter 46 from \cite{siciliano2016handbook}
+        \item Chapter 10 from \cite{thrun2005probabilistic}
     \end{itemize}    
 
     \nocite{grisetti2010tutorial}
