Slides 06: Translate bibliography

--- a/teoricas/teorica_06/src/bibliography.tex
+++ b/teoricas/teorica_06/src/bibliography.tex
@@ -1,14 +1,14 @@
 \begin{frame}
     \frametitle{Material}
     
-    Material para armar estas slides:
+    Material used to create this slides:
     \begin{itemize}
         \item Cyrill Stachniss Bayes: \url{https://youtu.be/0lKHFJpaZvE} 
         \item Cyrill Stachniss KF y EKF: \url{https://youtu.be/E-6paM_Iwfc}
         \item Chebrolu EKF Localization: \url{https://youtu.be/PiCC-SxWlH8}
         \item Cyrill Stachniss Particle Filter: \url{https://youtu.be/MsYlueVDLI0}
-        \item Slides de ECI 2012
-        \item Seminario de curso: CS373 Udacity Programming a Robotic Car
+        \item Slides from ECI 2012
+        \item Course: CS373 Udacity Programming a Robotic Car
         \item \url{https://www.ipb.uni-bonn.de/html/teaching/photo12-2021/2021-pho2-14-ekf.pptx.pdf}
         \item \url{https://rse-lab.cs.washington.edu/projects/mcl}
         \item \url{http://ais.informatik.uni-freiburg.de/teaching/ws12/mapping/pdf/slam09-particle-filter.pdf}
@@ -17,32 +17,32 @@
 \end{frame}
 
 \begin{frame}
-	\frametitle{Bibliografía}
+	\frametitle{Bibliography}
 	
 
     \begin{itemize}
 
         \item EKF:
         \begin{itemize}
-            \item Capítulo 3 y 7 de: \cite{thrun2005probabilistic}
+            \item Chapter 3 and 7 \cite{thrun2005probabilistic}
             \item Shon and Lindsen: Manipulating the Multivariate Gaussian Density
         \end{itemize}
         
         \item Particle Filter:
         \begin{itemize}
-            \item Capítulo 3 \cite{thrun2005probabilistic}
+            \item Chapter 3 \cite{thrun2005probabilistic}
         \end{itemize}
         
 
         \item Monte Carlo Localization:
         \begin{itemize}
-            \item Capítulo 8.3 \cite{thrun2005probabilistic}
+            \item Chapter 8.3 \cite{thrun2005probabilistic}
         \end{itemize}
         
         
-        \item Modelos de observación y movimiento:
+        \item Motion and Observation models:
         \begin{itemize}
-            \item Capítulo 5 y 6 \cite{thrun2005probabilistic}
+            \item Chapter 5 and 6 \cite{thrun2005probabilistic}
         \end{itemize}
 
     \end{itemize}
