--- a/teoricas/teorica_08/src/slam.tex
+++ b/teoricas/teorica_08/src/slam.tex
@@ -19,6 +19,15 @@
     \end{block}
     
     \end{frame}
+
+    \begin{frame}
+        \frametitle{SLAM Applications}
+        
+        \begin{center}
+            \includegraphics[width=0.7\textwidth]{slam_applications.pdf}
+        \end{center}
+        
+    \end{frame}
     
     
     \begin{frame}
@@ -179,9 +188,9 @@
     \end{itemize}
     
     \begin{center}
-    \includegraphics[width=0.25\textwidth]{images/slam-landmarks.pdf}
+        \includegraphics[width=0.25\textwidth]{images/slam-landmarks.pdf}
     \end{center}
     
-    \end{frame}
+\end{frame}
     
     
