Slides 06: Update particle filter images

--- a/teoricas/teorica_06/src/localization.tex
+++ b/teoricas/teorica_06/src/localization.tex
@@ -4,6 +4,7 @@
     \begin{itemize}
         \item Bayes filter
         \item Kalman filter
+        \item Extended Kalman filter (EKF)
         \item Particle filter
     \end{itemize}
     
